--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/firebase": "^5.0.0-beta.14",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.17",
-    "cordova-android": "7.0.0",
+    "angularfire2": "^5.1.1",
+    "cordova-android": "^7.1.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -71,7 +75,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
